--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,29 +81,29 @@
         android:id="@+id/emergencyno"
         android:layout_width="350dp"
         android:layout_height="40dp"
-        android:layout_marginTop="15dp"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="70dp"
         android:layout_marginRight="10dp"
+        android:autoSizeMaxTextSize="30sp"
+        android:autoSizeMinTextSize="20sp"
         android:background="@drawable/button1"
         android:text="Emergency Numbers"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="25sp"
-        android:autoSizeMinTextSize="20sp"
-        android:autoSizeMaxTextSize="30sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/about"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/safetytips"
-        tools:ignore="UnusedAttribute" />
+        app:layout_constraintTop_toBottomOf="@+id/safetytips" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/about"
         android:layout_width="150dp"
         android:layout_height="40dp"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="15dp"
         android:autoSizeMaxTextSize="30sp"
@@ -124,8 +124,8 @@
         android:layout_width="150dp"
         android:layout_height="40dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="15dp"
         android:layout_marginEnd="40dp"
+        android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
         android:autoSizeMaxTextSize="30sp"
         android:autoSizeMinTextSize="20sp"
